# rust_streamer

./: Cargo.toml  README.md
src/: app.rs  lib.rs  main.rs  streaming.rs
src/connection/: client.rs  server.rs
src/streaming/: client.rs  server.rs
